--- a/css/theme.css
+++ b/css/theme.css
@@ -513,8 +513,8 @@ ul.sponsors {
 	padding-bottom: 25px;
 	border-top-width: 8px;
 	border-top-style: solid;
-	border-top-color: #2F2F2F;
-	background-color: #000000;
+	border-top-color: white;
+	background-color: white;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
